[package]
name = "ch17"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" # Optional, only if you need JSON support
chrono = "0.4.38"
rayon = "1.10.0"
anyhow = "1.0.93"
thiserror = "2.0.3"
lazy_static = "1.5.0"
reqwest = "0.12.9"
once_cell = "1.20.2" 